# Imgui-Gui-React

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  agent-note.txt  quote-test.cmd
.github/workflows/: windows.yml
backends/dx11/: dx11_backend.cpp
backends/dx12/: dx12_backend.cpp
btr/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  igr_backend_dx11.lib  igr_backend_dx12.lib  igr_core.lib  igr_react_bridge.lib  igr_shader_compiler.lib
btr/Testing/Temporary/: CTestCostData.txt
docs/: architecture.md  backend-hosting.md  build.md  dx11.md  dx12.md  engineering-log.md  extensions.md  hermes.md  memory.md  shaders.md  typescript-bridge.md  vision.md
examples/foundation-sample/: main.cpp
examples/win32-dx11-sample/: main.cpp
examples/win32-dx12-sample/: main.cpp
include/igr/: backend.hpp  context.hpp  diagnostics.hpp  frame.hpp  geometry.hpp  host.hpp  interaction.hpp  resources.hpp  result.hpp  shader.hpp  shader_compiler.hpp  version.hpp
include/igr/backends/: dx11_backend.hpp  dx12_backend.hpp
include/igr/detail/: string_lookup.hpp
include/igr/react/: document.hpp  hermes_runtime.hpp  runtime_bridge.hpp  transport.hpp
npm/: .codex-npm-test.done  npm-test-pass.cmd  package-lock.json  package.json
npm/apps/react-native-test/: package.json  tsconfig.json
npm/apps/react-native-test/src/: export-fixture.ts  hermes-entry.ts  index.ts  physics-scene.tsx
npm/apps/react-native-test/test/: physics-scene.test.ts
npm/tools/: build-hermes-bundle.mjs  export-fixtures.mjs  run-tests.mjs
scripts/: benchmark-memory.ps1  build.ps1  hermes-bundle.ps1  npm-install.ps1  npm-test.ps1  test.ps1
src/: context.cpp  diagnostics.cpp  frame.cpp  interaction.cpp  resources.cpp  result.cpp  shader_compiler.cpp  shader_compiler.hpp
src/react/: document.cpp  hermes_runtime.cpp  runtime_bridge.cpp  transport.cpp
tests/: core_frame_tests.cpp  dx11_backend_tests.cpp  dx11_external_host_tests.cpp  dx12_backend_tests.cpp  dx12_contract_tests.cpp  interaction_tests.cpp  react_bridge_tests.cpp  react_native_fixture.hpp  react_runtime_bridge_tests.cpp  react_transport_tests.cpp  shader_compiler_tests.cpp
tests/fixtures/: react-menu-test.menu.json  react-native-test.physics.json
tests/menu/: build-menu-assets.mjs  export-fixture.ts  hermes-entry.ts  main.cpp  menu-accent.glsl  menu-header.hlsl  menu-scene.test.ts  menu-scene.tsx  menu-shaders.ts  menu_runtime_tests.cpp  menu_support.hpp  tsconfig.json
typescript/: tsconfig.base.json
